--- a/environment.yml
+++ b/environment.yml
@@ -1,1 +1,112 @@
-##
+name: mm_mnfst
+channels:
+  - conda-forge
+  - defaults
+dependencies:
+  - brotli=1.1.0=hb547adb_1
+  - brotli-bin=1.1.0=hb547adb_1
+  - bzip2=1.0.8=h93a5062_5
+  - ca-certificates=2024.2.2=hf0a4a13_0
+  - certifi=2024.2.2=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - contourpy=1.2.0=py310hd137fd4_0
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - fonttools=4.50.0=py310hd125d64_0
+  - freetype=2.12.1=hadb7bae_2
+  - joblib=1.3.2=pyhd8ed1ab_0
+  - kiwisolver=1.4.5=py310h38f39d4_1
+  - lcms2=2.16=ha0e7c42_0
+  - lerc=4.0.0=h9a09cb3_0
+  - libblas=3.9.0=21_osxarm64_openblas
+  - libbrotlicommon=1.1.0=hb547adb_1
+  - libbrotlidec=1.1.0=hb547adb_1
+  - libbrotlienc=1.1.0=hb547adb_1
+  - libcblas=3.9.0=21_osxarm64_openblas
+  - libcxx=16.0.6=h4653b0c_0
+  - libdeflate=1.20=h93a5062_0
+  - libffi=3.4.2=h3422bc3_5
+  - libgfortran=5.0.0=13_2_0_hd922786_3
+  - libgfortran5=13.2.0=hf226fd6_3
+  - libjpeg-turbo=3.0.0=hb547adb_1
+  - liblapack=3.9.0=21_osxarm64_openblas
+  - libopenblas=0.3.26=openmp_h6c19121_0
+  - libpng=1.6.43=h091b4b1_0
+  - libsqlite=3.45.2=h091b4b1_0
+  - libtiff=4.6.0=h07db509_3
+  - libwebp-base=1.3.2=hb547adb_0
+  - libxcb=1.15=hf346824_0
+  - libzlib=1.2.13=h53f4e23_5
+  - llvm-openmp=18.1.2=hcd81f8e_0
+  - matplotlib=3.8.3=py310hb6292c7_0
+  - matplotlib-base=3.8.3=py310h2439c42_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - ncurses=6.4.20240210=h078ce10_0
+  - numpy=1.26.4=py310hd45542a_0
+  - openjpeg=2.5.2=h9f1df11_0
+  - openssl=3.2.1=h0d3ecfb_1
+  - packaging=24.0=pyhd8ed1ab_0
+  - pandas=2.2.2=py310h401b61c_0
+  - patsy=0.5.6=pyhd8ed1ab_0
+  - pillow=10.3.0=py310h81a8c2e_0
+  - pip=24.0=pyhd8ed1ab_0
+  - pthread-stubs=0.4=h27ca646_1001
+  - pyparsing=3.1.2=pyhd8ed1ab_0
+  - python=3.10.14=h2469fbe_0_cpython
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-tzdata=2024.1=pyhd8ed1ab_0
+  - python_abi=3.10=4_cp310
+  - pytz=2024.1=pyhd8ed1ab_0
+  - readline=8.2=h92ec313_1
+  - scikit-learn=1.4.1.post1=py310h7ef31dd_0
+  - scipy=1.12.0=py310hf4b343e_2
+  - seaborn=0.13.2=hd8ed1ab_0
+  - seaborn-base=0.13.2=pyhd8ed1ab_0
+  - setuptools=69.2.0=pyhd8ed1ab_0
+  - six=1.16.0=pyh6c4a22f_0
+  - statsmodels=0.14.1=py310h50ce23c_0
+  - threadpoolctl=3.4.0=pyhc1e730c_0
+  - tk=8.6.13=h5083fa2_1
+  - tornado=6.4=py310hd125d64_0
+  - tqdm=4.66.2=pyhd8ed1ab_0
+  - tzdata=2024a=h0c530f3_0
+  - unicodedata2=15.1.0=py310h2aa6e3c_0
+  - wheel=0.43.0=pyhd8ed1ab_1
+  - xorg-libxau=1.0.11=hb547adb_0
+  - xorg-libxdmcp=1.1.3=h27ca646_0
+  - xz=5.2.6=h57fd34a_0
+  - zstd=1.5.5=h4f39d0f_0
+  - pip:
+      - absl-py==2.1.0
+      - astunparse==1.6.3
+      - charset-normalizer==3.3.2
+      - flatbuffers==24.3.25
+      - gast==0.5.4
+      - google-pasta==0.2.0
+      - grpcio==1.62.1
+      - h5py==3.11.0
+      - idna==3.7
+      - keras==3.2.1
+      - libclang==18.1.1
+      - markdown==3.6
+      - markdown-it-py==3.0.0
+      - markupsafe==2.1.5
+      - mdurl==0.1.2
+      - ml-dtypes==0.3.2
+      - namex==0.0.7
+      - opt-einsum==3.3.0
+      - optree==0.11.0
+      - protobuf==4.25.3
+      - pygments==2.17.2
+      - relieff==0.1.2
+      - requests==2.31.0
+      - rich==13.7.1
+      - sklearn-relief==1.0.0b2
+      - tensorboard==2.16.2
+      - tensorboard-data-server==0.7.2
+      - tensorflow==2.16.1
+      - tensorflow-io-gcs-filesystem==0.36.0
+      - termcolor==2.4.0
+      - typing-extensions==4.11.0
+      - urllib3==2.2.1
+      - werkzeug==3.0.2
+      - wrapt==1.16.0
